8227039: Shenandoah: Aggressive heuristics for Traversal mode
Reviewed-by: shade